@@ -1,6 +1,6 @@
 Package: cluster
-Version: 1.11.13
-Date: 2009-03-12
+Version: 1.12.0
+Date: 2009-05-13
 Priority: recommended
 Author: Martin Maechler, based on S original by Peter Rousseeuw <rousse@uia.ua.ac.be>,
 	Anja.Struyf@uia.ua.ac.be and Mia.Hubert@uia.ua.ac.be,
